<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_add_contact"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add_contact"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="collapseActionView"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        app:showAsAction="collapseActionView"/>

</menu>
